<resources>
    <string name="app_name">Carific</string>

    <string name="dismiss">Dismiss</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="create_validation_error">Enter all required attributes</string>
    <string name="create_date_hint">Date</string>
    <string name="create_time_hint">Time</string>


    <string name="navigation_timeline">Timeline</string>
    <string name="navigation_statistics">Statistics</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_achievements">Achievements</string>

    <string name="title_timeline">%s\'s timeline</string>

    <string name="action_change_car">Change car</string>
    <string name="change_car_select">Select car</string>


    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>

    <string name="profile_currency">Currency</string>
    <string name="profile_currency_select">Select currency</string>
    <string name="profile_currency_selected">Selected currency %s</string>


    <string name="timeline_list_empty">No entries</string>
    <string name="timeline_list_error_loading">Can not load refuelings and expenses</string>

    <string name="refueling">Refueling</string>
    <string name="refueling_create">Create refueling</string>
    <string name="refueling_edit">Edit refueling</string>
    <string name="bill_capture">Scan your bill</string>
    <string name="bill_capture_permission_camera_rationale">Access to the camera is needed for scanning bills</string>
    <string name="bill_capture_low_storage_error">Bill scanning cannot be used due to low device storage</string>
    <string name="bill_capture_detection_auto">Auto detecting…</string>
    <string name="bill_capture_detection_manual">Manual</string>
    <string name="bill_capture_enter_fuel_volume">Tap on fuel volume</string>
    <string name="bill_capture_enter_price_total">Tap on total price</string>
    <string name="bill_capture_finished">Refueling data captured from a bill</string>


    <string name="refueling_create_distance_from_last_hint">Distance from last refueling</string>
    <string name="refueling_create_distance_from_last_error">Distance is not set</string>
    <string name="refueling_create_fuel_volume_hint">Fuel volume</string>
    <string name="refueling_create_fuel_volume_error">Fuel volume is incorrect</string>
    <string name="refueling_create_price_total_hint">Total price</string>
    <string name="refueling_create_price_total_error">Total price is incorrect</string>
    <string name="refueling_create_price_per_unit_hint">Unit price</string>
    <string name="refueling_create_price_per_unit_error">Price is incorrect</string>
    <string name="refueling_create_note_hint">Note</string>
    <string name="refueling_create_full_tank">Full tank</string>


    <string name="refueling_delete_dialog_title">Delete refueling</string>
    <string name="refueling_delete_dialog_message">Do you really want to delete this refueling?</string>

    <string name="expense_create">Create expense</string>
    <string name="expense_edit">Edit expense</string>
    <string name="expense_create_info_hint">Info</string>
    <string name="expense_create_info_error">Enter expense info</string>
    <string name="expense_create_price_error">Price is incorrect</string>
    <string name="expense_create_price_hint">Price</string>
    <string name="expense">Expense</string>


    <string name="expense_delete_dialog_title">Delete expense</string>
    <string name="expense_delete_dialog_message">Do you really want to delete this expense?</string>


    <string name="car_create">Add car</string>
    <string name="car_edit">Edit car</string>
    <string name="car_delete">Delete</string>
    <string name="car_manage">Manage cars</string>
    <string name="car_create_name_hint">Vehicle name</string>
    <string name="car_create_name_error">Name is empty</string>
    <string name="car_create_manufacturer_hint">Vehicle manufacturer</string>
    <string name="car_create_manufacturer_error">Manufacturer is empty</string>
    <string name="car_create_type_hint">Vehicle type</string>
    <string name="car_create_picture_fail">Picture not added</string>
    <string name="car_create_validation_error">Enter vehicle name and manufacturer</string>
    <string name="car_create_error">Can not create vehicle</string>
    <string name="car_delete_dialog_title">Delete vehicle</string>
    <string name="car_delete_dialog_message">Do you really want to delete this vehicle and all its data?</string>

    <string name="car_list_empty">No cars</string>
    <string name="car_list_error_loading">Can not load cars</string>

    <string name="vehicle_type_sedan">Sedan</string>
    <string name="vehicle_type_hatchback">Hatchback</string>
    <string name="vehicle_type_combi">Combi</string>
    <string name="vehicle_type_van">Van</string>
    <string name="vehicle_type_motocycle">Motocycle</string>
    <string name="vehicle_type_pickup">Pickup</string>
    <string name="vehicle_type_suv">SUV</string>
    <string name="vehicle_type_coupe">Coupe</string>
    <string name="vehicle_type_sport">Sport</string>

    <string name="title_activity_car_list">Cars</string>
    <string name="title_activity_car_choice_list">Select car</string>

    <string name="na">-</string>
    <string name="km">km</string>

    <string name="unit_text_placeholder">%1$s %2$s</string>
    <string name="signin_other_error">Error occurred during sign in</string>


    <string name="shortcut_add_fuel_short">Add refueling</string>
    <string name="shortcut_add_fuel_long">Add refueling for %s</string>
    <string name="shortcut_scan_bill_short">Scan bill</string>
    <string name="shortcut_scan_bill_long">Scan bill for %s</string>

    <string name="statistics_details">Detailed statistics</string>

    <string name="statistics_average_distance_per_day">Average daily driven distance</string>
    <string name="statistics_average_distance_per_week">Average weekly driven distance</string>
    <string name="statistics_average_distance_per_month">Average monthly driven distance</string>
    <string name="statistics_average_distance_per_year">Average yearly driven distance</string>
    <string name="statistics_average_expense_cost_per_week">Average expense costs per week</string>
    <string name="statistics_average_expense_cost_per_month">Average expense costs per month</string>
    <string name="statistics_average_expense_cost_per_year">Average expense costs per year</string>
    <string name="statistics_average_fuel_cost_per_week">Average fuel costs per week</string>
    <string name="statistics_average_fuel_cost_per_month">Average fuel costs per month</string>
    <string name="statistics_average_fuel_cost_per_year">Average fuel costs per year</string>
    <string name="statistics_average_number_of_expenses_per_week">Average expenses per week</string>
    <string name="statistics_average_number_of_expenses_per_month">Average expenses per month</string>
    <string name="statistics_average_number_of_expenses_per_year">Average expenses per year</string>
    <string name="statistics_average_number_of_fill_ups_per_week">Average fill ups per week</string>
    <string name="statistics_average_number_of_fill_ups_per_month">Average fill ups per month</string>
    <string name="statistics_average_number_of_fill_ups_per_year">Average fill ups per year</string>
    <string name="statistics_average_total_cost_per_week">Average costs per week</string>
    <string name="statistics_average_total_cost_per_month">Average costs per month</string>
    <string name="statistics_average_total_cost_per_year">Average costs per year</string>
    <string name="statistics_avg_fuel_volume_per_fill_up">Average fuel volume per fill up</string>
    <string name="statistics_avg_fuel_price_per_fill_up">Average fuel cost per fill up</string>
    <string name="statistics_costs_per_distance">Total costs per 100%s</string>
    <string name="statistics_costs_per_distance_fuel">Fuel costs per 100%s</string>
    <string name="statistics_costs_per_distance_expense">Expense costs per 100%s</string>
    <string name="statistics_distance_between_fill_ups_average">Average distance between fill ups</string>
    <string name="statistics_distance_between_fill_ups_lowest">Min distance between fill ups</string>
    <string name="statistics_distance_between_fill_ups_highest">Max distance between fill ups</string>
    <string name="statistics_distance_driven_total">Total tracked distance</string>
    <string name="statistics_expenses_number_total">Total expenses</string>
    <string name="statistics_fill_ups_number_total">Total fill ups</string>
    <string name="statistics_fuel_consumption_average">Average fuel consumption</string>
    <string name="statistics_fuel_consumption_best">Best fuel consumption</string>
    <string name="statistics_fuel_consumption_worst">Worst fuel consumption</string>
    <string name="statistics_fuel_unit_price_average">Average fuel price</string>
    <string name="statistics_fuel_unit_price_best">Lowest fuel price</string>
    <string name="statistics_fuel_unit_price_worst">Highest fuel price</string>
    <string name="statistics_price_total">Total costs</string>
    <string name="statistics_price_total_fuel">Total fuel costs </string>
    <string name="statistics_price_total_expense">Total expense costs</string>
    <string name="statistics_tracking_period">Tracking period</string>
    <string name="statistics_volume_total_fuel">Total fuel volume</string>

    <string name="statistics_app_usage">FuelUp usage</string>
    <string name="statistics_costs">Costs</string>
    <string name="statistics_costs_per_distance_header">Costs &amp; distance</string>
    <string name="statistics_costs_per_month">Monthly costs</string>
    <string name="statistics_costs_per_time">Costs &amp; time</string>
    <string name="statistics_distance_in_time">Distance &amp; time</string>
    <string name="statistics_expenses">Expenses</string>
    <string name="statistics_expense_price_alert">Expense price: %s </string>
    <string name="statistics_fuel_consumption">Fuel consumption</string>
    <string name="statistics_fuel_consumption_per_month">Monthly consumption</string>
    <string name="statistics_fuel_consumption_all_time_average">All time average</string>
    <string name="statistics_fuel_price">Fuel price</string>
    <string name="statistics_fuel_price_alert">Fuel price: %s </string>
    <string name="statistics_fuel_unit_price">Fuel unit price</string>
    <string name="statistics_refueling">Refueling</string>
    <string name="statistics_totals">Totals</string>

    <string name="statistics_chart_date_range">From %s to %s</string>


    <string name="units_mi" translatable="false">mi</string>
    <string name="units_km" translatable="false">km</string>
    <string name="units_litrePer100km" translatable="false">\u2113/100km</string>
    <string name="units_mpg" translatable="false">mpg</string>
    <string name="units_litreper100_distance_units" translatable="false">\u2113/100 %s</string>
    <string name="units_distance_units_per_litre" translatable="false">%s/\u2113</string>
    <string name="units_litre" translatable="false">\u2113</string>
    <string name="units_gallon" translatable="false">gal</string>
    <string name="days" translatable="false">days</string>
    <string name="show_achievements">Show achievements</string>

</resources>
