<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_scroller"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6">


        <android.support.v7.widget.CardView style="@style/BasicCard">

            <LinearLayout
                android:id="@+id/login_user_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="5"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/login_user_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/space_basic"
                    android:src="@drawable/ic_account_circle_100dp" />

                <TextView
                    android:id="@+id/login_user_name"
                    style="@style/TextImportant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="My name" />

                <TextView
                    android:id="@+id/login_user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="me@mail.com" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView style="@style/BasicCard">

            <LinearLayout
                android:id="@+id/profile_current_user_cars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="5"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/profile_car_add"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/car_create" />

                <Button
                    android:id="@+id/profile_car_edit"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/car_edit" />

            </LinearLayout>

        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView style="@style/BasicCard">

            <Button
                android:id="@+id/profile_sign_out"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sign_out" />
            
        </android.support.v7.widget.CardView>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>