<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="sk.momosi.carific.ui.fuel.edit.AddEditFuelViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="sk.momosi.carific.ui.fuel.edit.AddEditfuelActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="false"
            android:theme="@style/AppTheme.AppBarOverlay">


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@{viewmodel.isCreateNew ? @string/refueling_create :  @string/refueling_edit }" />
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView style="@style/BasicCard">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:animateLayoutChanges="true"
                        android:visibility="@{viewmodel.isLoading ? View.VISIBLE : View.GONE}"
                        tools:visibility="gone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:animateLayoutChanges="true"
                        android:orientation="vertical"
                        android:visibility="@{viewmodel.isLoading ? View.INVISIBLE : View.VISIBLE}">

                        <!-- Distance -->
                        <LinearLayout style="@style/LinearHorizontal">

                            <android.support.design.widget.TextInputLayout
                                style="@style/TextInputLayoutWithValidations"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                app:errorText="@{@string/refueling_create_distance_from_last_error}"
                                app:isValid="@{viewmodel.isDistanceFromLastValid}">

                                <android.support.v7.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:hint="@string/refueling_create_distance_from_last_hint"
                                    android:inputType="number"
                                    android:text="@={viewmodel.distanceFromLast}" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/text_input_unit_top_margin"
                                android:text="km" />
                        </LinearLayout>

                        <!-- Volume -->
                        <LinearLayout style="@style/LinearHorizontal">

                            <android.support.design.widget.TextInputLayout
                                style="@style/TextInputLayoutWithValidations"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                app:errorText="@{@string/refueling_create_fuel_volume_error}"
                                app:isValid="@{viewmodel.isVolumeValid()}">

                                <android.support.v7.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/refueling_create_fuel_volume_hint"
                                    android:inputType="numberDecimal"
                                    android:maxLines="1"
                                    android:text="@={viewmodel.volume}" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/text_input_unit_top_margin"
                                android:text="l" />
                        </LinearLayout>

                        <!-- Price per litre -->
                        <LinearLayout style="@style/LinearHorizontal">

                            <android.support.design.widget.TextInputLayout
                                style="@style/TextInputLayoutWithValidations"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                app:errorText="@{@string/refueling_create_price_per_unit_error}"
                                app:isValid="@{viewmodel.isPricePerLitreValid}">

                                <android.support.v7.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/refueling_create_price_per_unit_hint"
                                    android:inputType="numberDecimal"
                                    android:maxLines="1"
                                    android:text="@={viewmodel.pricePerLitre}" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/text_input_unit_top_margin"
                                android:text="@{viewmodel.user.currencySymbol}" />
                        </LinearLayout>

                        <!-- Price total -->
                        <LinearLayout style="@style/LinearHorizontal">

                            <android.support.design.widget.TextInputLayout
                                style="@style/TextInputLayoutWithValidations"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                app:errorText="@{@string/refueling_create_price_total_error}"
                                app:isValid="@{viewmodel.isPriceTotalValid}">

                                <android.support.v7.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/refueling_create_price_total_hint"
                                    android:inputType="numberDecimal"
                                    android:maxLines="1"
                                    android:text="@={viewmodel.priceTotal}" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/text_input_unit_top_margin"
                                android:text="@{viewmodel.user.currencySymbol}" />
                        </LinearLayout>

                        <!-- Date -->
                        <android.support.design.widget.TextInputLayout style="@style/TextInputLayoutWithValidations">

                            <EditText
                                android:id="@+id/refueling_add_date_picker"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="false"
                                android:focusable="false"
                                android:freezesText="true"
                                android:hint="@string/refueling_create_date_hint"
                                android:text="@{viewmodel.date.get().toString()}"
                                android:inputType="date" />
                        </android.support.design.widget.TextInputLayout>

                        <!-- Full tank -->
                        <android.support.v7.widget.AppCompatCheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@={viewmodel.isFull}"
                            android:gravity="center"
                            android:text="@string/refueling_create_full_tank" />

                        <!-- Note -->
                        <android.support.design.widget.TextInputLayout style="@style/TextInputLayoutWithValidations">

                            <android.support.v7.widget.AppCompatEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/refueling_create_note_hint"
                                android:inputType="text"
                                android:text="@={viewmodel.note}" />
                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </android.support.v4.widget.NestedScrollView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/refueling_add_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_done" />

    </android.support.design.widget.CoordinatorLayout>
</layout>