<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="sk.momosi.carific.ui.car.edit.AddEditCarViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="sk.momosi.carific.ui.car.edit.AddEditCarActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_a_photo"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{() -> viewmodel.imageClicked()}"
                    app:vehicle_picture="@{viewmodel.picturePath}"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:title="@{viewmodel.isCreateNew ? @string/car_create :  @string/car_edit }" />
            </RelativeLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView style="@style/BasicCard">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:animateLayoutChanges="true"
                        android:visibility="@{viewmodel.isLoading ? View.VISIBLE : View.GONE}"
                        tools:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:animateLayoutChanges="true"
                        android:orientation="vertical"
                        android:visibility="@{viewmodel.isLoading ? View.INVISIBLE : View.VISIBLE}">

                        <!-- Name-->
                        <android.support.design.widget.TextInputLayout
                            style="@style/TextInputLayoutWithValidations"
                            app:errorText="@{@string/car_create_name_error}"
                            app:isValid="@{viewmodel.isNameValid}">

                            <EditText
                                android:id="@+id/car_create_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/car_create_name_hint"
                                android:inputType="textCapWords"
                                android:maxLines="1"
                                android:text="@={viewmodel.name}" />
                        </android.support.design.widget.TextInputLayout>

                        <!-- Manufacturer-->
                        <android.support.design.widget.TextInputLayout
                            style="@style/TextInputLayoutWithValidations"
                            app:errorText="@{@string/car_create_manufacturer_error}"
                            app:isValid="@{viewmodel.isManufacturerValid}">

                            <EditText
                                android:id="@+id/car_create_manufacturer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/car_create_manufacturer_hint"
                                android:inputType="textCapWords"
                                android:maxLines="1"
                                android:text="@={viewmodel.manufacturer}" />
                        </android.support.design.widget.TextInputLayout>

                        <!-- Type-->
                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/space_basic"
                                android:text="@string/car_create_type_hint"
                                android:textAppearance="?android:textAppearanceSmall"
                                android:textColor="@color/colorAccent" />

                            <Spinner
                                android:id="@+id/car_create_type"
                                android:layout_width="fill_parent"
                                android:layout_height="@dimen/spinner_height" />

                        </LinearLayout>

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </android.support.v4.widget.NestedScrollView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/car_add_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_done" />

    </android.support.design.widget.CoordinatorLayout>
</layout>